--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -12,6 +12,9 @@ description = "Build your entire project with one command 🚀"
 path = "src/lib.rs"
 
 [dependencies]
+reqwest = { version = "0.10.0", features = ["blocking", "json"] }
+serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
+serde = { version = "1.0", features = ["derive"] }
 
 [[example]]
 name = "basic"
