--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -15,6 +15,7 @@ path = "src/lib.rs"
 reqwest = { version = "0.10.0", features = ["blocking", "json"] }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 serde = { version = "1.0", features = ["derive"] }
+zip = "0.6.2"
 
 [[example]]
 name = "basic"
