--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -15,7 +15,7 @@ path = "src/lib.rs"
 reqwest = { version = "0.10.0", features = ["blocking", "json"] }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 serde = { version = "1.0", features = ["derive"] }
-zip = "0.6.2"
+base64 = { version = "0.13.0", default-features = false, features = ["std"] }
 
 [[example]]
 name = "basic"
