--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,45 +1,30 @@
-name: Build and upload binaries to release
+name: Release
+
+permissions:
+  contents: write
 
 on:
-  repository_dispatch:
-    types: [tag-created]
+  push:
+    branches:
+      - "master"
 
 jobs:
-  release:
-    name: Build and Release
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        include:
-          - os: ubuntu-22.04
-            artifact_name: dt
-            asset_name: dt-ubuntu-22.04.zip
-          - os: macos-11
-            artifact_name: dt
-            asset_name: dt-macos-11.zip
-          - os: windows-2022
-            artifact_name: dt.exe
-            asset_name: dt-windows-2022.zip
+  create-release:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
+      - uses: actions/checkout@v3
+      - uses: taiki-e/create-gh-release-action@v1
         with:
-          toolchain: stable
-      - name: Build code
-        uses: actions-rs/cargo@v1
+          changelog: CHANGELOG.md
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  upload-assets:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: taiki-e/upload-rust-binary-action@v1
         with:
-          command: build
-          args: --release
-      - name: Compress to zip file
-        uses: vimtor/action-zip@v1
-        with:
-          files: target/release/${{ matrix.artifact_name }}
-          dest: target/release/${{ matrix.asset_name }}
-      - name: Upload binary to release
-        uses: svenstaro/upload-release-action@v1-release
-        with:
-          repo_token: ${{ secrets.TOKEN_GITHUB }}
-          file: target/release/${{ matrix.asset_name }}
-          asset_name: ${{ matrix.asset_name }}
-          tag: ${{ github.event.client_payload.new_version }}
+          bin: dt
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
